--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,133 @@
     border: 1px solid #b9b9b9;
 }
 
+body {
+    font-family: 'SFUIDisplay';
+    background-color: white;
+    font-size: 16px;
+    color: #222222;
+
+}
+
+.wrapper {
+  max-width: calc(100% - 160px);
+  margin: 0 auto;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+p{
+  font-size: 16px;
+}
+
+.news{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.news-title{
+  width: 100%;
+  font-size: 32px;
+  margin-top: 100px;
+  text-align: center;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.news-articles{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news-articles__item{
+  max-width: calc(33.33333% - 30px);
+  margin: 48px 5px 0;
+}
+
+.article__preview{
+  width: 100%;
+  border-radius: 20px;
+  margin-bottom: 40px;
+}
+
+.article__date{
+  display: flex;
+  align-items: center;
+  width: 164px;
+  height: 28px;
+  font-size: 13px;
+  opacity: 30%;
+  margin-bottom: 13px;
+}
+
+.article__title{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 44px;
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+.article__text{
+  width: 100%;
+  font-size: 16px;
+  margin: 5px 0 12px;
+  line-height: 28px;
+}
+
+.news__link{
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  height: 24px;
+  font-size: 20px;
+  color: #FF4582;
+}
+
+.learn-more__icon{
+  width: 9px;
+  height: 16px;
+  margin: 0 20px 0;
+}
+
+.news-single{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.news-single__images{
+  max-width: calc(33.3333% - 32px);
+  margin-right: 32px;
+}
+
+.news-single__text{
+  max-width: 66.6666%
+}
+
+.news-single
+.news-title{
+  text-align: start;
+  margin-top: 0px;
+}
+
+.news-single
+.article__date{ 
+  margin: 0 0 30px;
+}
+
+.news-single
+.news__link
+.learn-more__icon{ 
+  margin-left: 0;
+}
+
+
+.text-banner {
+    width: 100%;
+    height: 30px;
+    overflow: hidden;
+    line-height: 28px;
+}
